--- a/.env.production
+++ b/.env.production
@@ -5,5 +5,6 @@ ENV = 'production'
 # 下面一行是 生产环境使用Mock数据（注意：需要在main.js的27行-30行 开启 mock）
 #VUE_APP_BASE_API = '/prod-api'
 # 下面一行是 生产环境使用后端接口数据（注意：需要在main.js的27行-30行 禁用 mock）
-VUE_APP_BASE_API = 'http://192.168.10.55:8320'
+#VUE_APP_BASE_API = 'http://192.168.10.55:8320'
+VUE_APP_BASE_API = 'http://localhost:8320'
 VUE_APP_UPLOAD_RESOURCES_PATH = "/istorage/"
