--- a/.env.development
+++ b/.env.development
@@ -3,9 +3,10 @@ ENV = 'development'
 
 # base api
 # 下面一行是 开发环境使用Mock数据
-VUE_APP_BASE_API = '/dev-api'
+#VUE_APP_BASE_API = '/dev-api'
 # 下面一行是 开发环境使用后端接口数据
-# VUE_APP_BASE_API = 'http://192.168.10.55:8320'
+#VUE_APP_BASE_API = 'http://192.168.10.55:8320'
+VUE_APP_BASE_API = 'http://localhost:8320'
 VUE_APP_UPLOAD_RESOURCES_PATH = "/istorage/"
 
 # vue-cli uses the VUE_CLI_BABEL_TRANSPILE_MODULES environment variable,
